# nfc-music-player

./: README.md  __init__.py  csv_watcher.py  library.py  main.py  media.py  music-player.py  music_player.py  nfc_monitor.py  playback.py  pyproject.toml  reloader.py  start-music.sh  volume-control.py  volume_control.py  watch_reload.py
pico-w-library-helper/: code.py  pn532-test.py  search.html  secrets.py  settings.toml  wifi-test.py
pico-w-library-helper/lib/adafruit_pn532/: adafruit_pn532.mpy  i2c.mpy  spi.mpy  uart.mpy
troubleshooting/: pn532-sniffer.py  probe-pn532.py  reset-pn532-test.py  spi-loopback-test.py  spidev-test.py  spidev_test  test-pn532.py  test-rotary-encoder-switch.py
